@@ -1,3 +1,7 @@
+2020-05-13  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-gvfs.el (tramp-gvfs-enabled): Prevent crash for older Emacsen.
+
 2020-05-07  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-adb.el (tramp-adb-handle-process-file):
